# kbprep

./: .git-blame-ignore-revs  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  README.md  SESSION_START.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
python/: pyproject.toml
python/kbprep_worker/: __init__.py  apply_patch.py  atomic_io.py  audit.py  batch_manifest.py  blockify.py  canonical_annotations.py  canonical_assets.py  canonical_coverage.py  canonical_gate_evidence.py  canonical_ir.py  canonical_ledger.py  canonical_nodes.py  canonical_record_artifacts.py  canonical_relationships.py  canonical_routes.py  canonical_spans.py  canonical_spans_native.py  canonical_transcripts.py  classify_blocks.py  clean_rules.py  clean_view.py  cleaning_patch_gate.py  cleaning_patches.py  cleaning_policy_snapshot.py  cleaning_registry.py  cleanup.py  cli.py  converter_capabilities.py  converter_registry.py  detail_signal_rules.py  detect.py  document_cleaning_gate.py  document_type.py  document_type_signals.py  envelope.py  epub.py  error_codes.py  fs_safety.py  images.py  (+30 more)
python/kbprep_worker/converters/: asr.py  direct.py  external_tools.py  html.py  office_xml.py  office_xml_common.py  office_xml_docx.py
python/kbprep_worker/diagnose/: format_detect.py  pdf_analysis.py  pdf_route_diagnostics.py  runtime.py  text_quality.py
python/kbprep_worker/feedback/: __init__.py  canonical_ir_binding.py  command.py  dictionary_suggestions.py  (+5 more)
python/tests/: redact_map.py  test_atomic_io.py  test_audit_remediation_regressions.py  test_batch_status_manifest.py  test_canonical_ir_annotations.py  test_canonical_ir_assets.py  test_canonical_ir_coverage.py  test_canonical_ir_ledger.py  test_canonical_ir_manifest.py  test_canonical_ir_relationships.py  test_canonical_ir_schema.py  test_canonical_ir_source_spans.py  test_canonical_ir_typed_nodes.py  test_canonical_transcripts.py  test_check_file_size_script.py  test_clean_rules_scoped.py  test_clean_view.py  test_cleaning_patch_gate.py  test_cleaning_patches.py  test_cleaning_policy_snapshot.py  test_cleaning_registry.py  test_conversion_gate.py  test_converter_registry.py  test_core_processing_paths.py  test_diagnose.py  test_diagnose_text_quality.py  test_document_classification.py  test_document_cleaning_gate.py  test_envelope_status.py  test_epub_converter.py  test_error_code_contract.py  test_external_conversion.py  test_external_route_integration.py  test_external_tools.py  test_feedback.py  test_feedback_inputs.py  test_feedback_package_boundaries.py  test_feedback_promotion.py  test_feedback_proposals.py  test_frontmatter_safety.py  (+39 more)
(+200 files in other folders)
