[project]
name = "kbprep-worker"
version = "0.5.2"
description = "KBPrep Python worker: prepare local raw files into clean Markdown"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mineru[all]>=3.2.1,<4",
    "PyMuPDF>=1.27,<2",
    "pymupdf4llm>=0.0.27,<1",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "yt-dlp>=2025.1,<2027"
]

[project.optional-dependencies]
# 锁 torch 2.8.0：lmdeploy 0.11.1（mineru[all] 含）要求 torch==2.8.0；装最新会和 lmdeploy 冲突被降级成 CPU 版。
# CUDA 加速走 cu126 index（见 python/kbprep_worker/setup_env.py 的 CUDA_TORCH_INDEX_URL）。
cuda = ["torch==2.8.0", "torchvision==0.23.0"]
# ASR 双链路：qwen-asr(transformers 后端，中文) 共用 cuda extra 的 torch
# （dry-run 实测 qwen-asr 满足 torch>=2.0.0，不动 cu126）；openai-whisper(英文链路 whisper CLI)。
# 配置见 setup_env + external_tools.transcribe_media（按 KBPREP_ASR_LANGUAGE 路由）。
asr = [
    "qwen-asr>=0.0.6",
    "openai-whisper>=20231117",
]
dev = [
    "coverage[toml]>=7.6,<8",
    "mypy>=1.17,<2",
    "pytest>=8,<9",
    "ruff>=0.8,<1"
]

[tool.coverage.run]
branch = true
source = ["kbprep_worker"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
